swagger doc in createPath
