# app/routes.go
@@ -29,7 +29,7 @@ func mapUrls() {
 	router.GET("/userpath", middlewares.ValidateJWT(), controllers.ShowUserPath)
 	router.PUT("/passwordRecovery", controllers.PasswordRecovery)
 	router.PUT("/modifyPassword", middlewares.CheckDB(), middlewares.ValidateJWT(), controllers.ModifyUserPassword)
-	router.POST("/createPath", middlewares.CheckDB(), middlewares.CheckPermissions(), controllers.Path)
+	router.POST("/createPath", middlewares.CheckDB(), middlewares.CheckPermissions(), controllers.CreatePath)
 	//use ginSwagger middleware to serve the API docs
 	url := ginSwagger.URL("http://localhost:8080/swagger/doc.json")
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
