# docs/swagger.json
@@ -4,6 +4,53 @@
         "contact": {}
     },
     "paths": {
+        "/createPath": {
+            "post": {
+                "description": "allows you to create a new path if you are an admin",
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "Create new career path",
+                "parameters": [
+                    {
+                        "description": "Complete the json to create new path",
+                        "name": "body-json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Path has been created",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "could not create Path",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "default": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "description": "get the email and password to access",
